--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.2",
     "numpy>=2.3.4",
+    "pandas>=2.3.3",
     "unicorn>=2.1.4",
     "uvicorn>=0.38.0",
 ]
